2011-10-04  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/conf.jl
	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/expose.jl
	* lisp/sawfish/wm/edge/tile.jl
	* lisp/sawfish/wm/ext/match-window.jl: renamed tile EdgeAction to
	expose

2011-08-18  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/util.jl: added move-window-to-corner and
	move-window-to-edge helpers

	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/conf.jl
	* lisp/sawfish/wm/edge/expand.jl: added expand-window functionality to
	EdgeActions. expand-window-half-screen-vertical and
	expand-window-half-screen-horizontal are the public functions.

	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/conf.jl
	* lisp/sawfish/wm/edge/maxmize.jl: added an maximize-window
	edge-action

2011-07-09  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/actions.jl: fixed calling tile-windows

2011-07-08  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/tile.jl: also exclude ignored windows from
	tiling. added window-never-tile-p

	* lisp/sawfish/wm/ext/match-window.jl: added never-tile window-matcher

	* man/sawfish.texi: updated EA docs

2011-07-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/tile.jl: make interactive call tile-windows
	work again

2011-06-27  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/conf.jl: define before/after-edge-action-hook
	here

	* lisp/sawfish/wm/edge/actions.jl: improved passing of while-moving
	flag to edge-actions

	* lisp/sawfish/wm/edge/flip.jl: split up code for flip-viewport and
	flip-workspace

	* lisp/sawfish/wm/edge/flip.jl
	* lisp/sawfish/wm/edge/hot-spot.jl
	* lisp/sawfish/wm/edge/tile.jl
	* lisp/sawfish/wm/edge/viewport-drag.jl: call
	before/after-edge-action-hook from the proper places

2011-06-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/actions.jl: added before-edge-action-hook and